fix(main): overflow-x hidden on html and body tag

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -11,8 +11,11 @@ html {
   padding: 0;
   font-size: 16px;
   font-family: 'Inter', Helvetica, Arial, sans-serif;
-  overflow-x: hidden;
   cursor: none;
+}
+
+html, body {
+  overflow-x: hidden;
 }
 
 *,
